Fixes type, spacing around more menu, and updates template variable autocomplete score

--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -3580,7 +3580,7 @@ input:disabled {
 }
 .ace_editor.ace_autocomplete { 
   width: 500px !important;
-  background-color: var(--color-panel-solid)!important;
+  background-color: var(--color-surface-solid) !important;
 }
 
 /* Radix-style pagination for ReactPaginate */
